--- a/Contextual Chatbot - NLP and Tensorflow.ipynb
+++ b/Contextual Chatbot - NLP and Tensorflow.ipynb
@@ -32,7 +32,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dhia\\AppData\\Local\\Temp\\ipykernel_11920\\1246160611.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "C:\\Users\\Dhia\\AppData\\Local\\Temp\\ipykernel_9568\\1246160611.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
       "  from IPython.core.display import Image, display\n"
      ]
     },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -155,9 +155,9 @@
      "output_type": "stream",
      "text": [
       "Stemming, Lowering and Removing Duplicates.......\n",
-      "54 documents\n",
-      "1 classes ['Sexuality Questions']\n",
-      "17 unique stemmed words ['a', 'c', 'd', 'e', 'f', 'h', 'i', 'm', 'n', 'o', 'r', 's', 't', 'u', 'v', 'w', 'y']\n"
+      "81 documents\n",
+      "10 classes ['Sexuality Questions', 'goodbye', 'greeting', 'hours', 'mopeds', 'opentoday', 'payments', 'rental', 'thanks', 'today']\n",
+      "63 unique stemmed words [\"'d\", \"'s\", 'a', 'acceiv', 'anyon', 'ar', 'bye', 'c', 'can', 'card', 'cash', 'credit', 'd', 'day', 'do', 'doe', 'e', 'f', 'good', 'goodby', 'h', 'hav', 'hello', 'help', 'hi', 'hour', 'how', 'i', 'is', 'kind', 'lat', 'lik', 'm', 'mastercard', 'mop', 'n', 'o', 'of', 'on', 'op', 'r', 'rent', 's', 'see', 't', 'tak', 'thank', 'that', 'ther', 'thi', 'to', 'today', 'u', 'v', 'w', 'we', 'what', 'when', 'which', 'work', 'y', 'yo', 'you']\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBuilding Neural Network for Out Chatbot to be Contextual....\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mResetting graph data....\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreset_default_graph\u001b[49m()\n",
+      "Input \u001b[1;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBuilding Neural Network for Out Chatbot to be Contextual....\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mResetting graph data....\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreset_default_graph\u001b[49m()\n",
       "\u001b[1;31mAttributeError\u001b[0m: module 'tensorflow' has no attribute 'reset_default_graph'"
      ]
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,17 +291,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Step: 6999  | time: 0.013s\n",
-      "| Adam | epoch: 1000 | loss: 0.00000 - binary_acc: 1.0000 -- iter: 48/54\n",
-      "Training Step: 7000  | time: 0.015s\n",
-      "| Adam | epoch: 1000 | loss: 0.00000 - binary_acc: 1.0000 -- iter: 54/54\n",
+      "Training Step: 10999  | total loss: \u001b[1m\u001b[32m0.00033\u001b[0m\u001b[0m | time: 0.027s\n",
+      "| Adam | epoch: 1000 | loss: 0.00033 - acc: 1.0000 -- iter: 80/81\n",
+      "Training Step: 11000  | total loss: \u001b[1m\u001b[32m0.00035\u001b[0m\u001b[0m | time: 0.030s\n",
+      "| Adam | epoch: 1000 | loss: 0.00035 - acc: 1.0000 -- iter: 81/81\n",
       "--\n",
       "Saving the Model.......\n",
       "INFO:tensorflow:C:\\Users\\Dhia\\Desktop\\chatbot\\model.tflearn is not in all_model_checkpoint_paths. Manually adding it.\n"
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [13]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdas\u001b[49m\n",
+      "Input \u001b[1;32mIn [15]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdas\u001b[49m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'das' is not defined"
      ]
     }
@@ -453,13 +453,43 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You- hey\n",
+      "They are popular beliefs that people have with the conviction that they help them prevent a pregnancy, but they are not really effective or scientifically based.\n",
+      "You- hi\n",
+      "Hello, thanks for visiting\n",
+      "You- how are you\n",
+      "Hello, thanks for visiting\n",
+      "You- hii\n",
+      "They are popular beliefs that people have with the conviction that they help them prevent a pregnancy, but they are not really effective or scientifically based.\n",
+      "You- gsdfgdfg\n",
+      "They are popular beliefs that people have with the conviction that they help them prevent a pregnancy, but they are not really effective or scientifically based.\n",
+      "You- hi\n",
+      "Good to see you again\n",
+      "You- hello\n",
+      "Good to see you again\n",
+      "You- Are you open today?\n",
+      "We're open every day from 9am-9pm\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    input_data = input(\"You- \")\n",
     "    answer = response(input_data)\n",
     "    answer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
